--- a/dlsys/0/hw0.ipynb
+++ b/dlsys/0/hw0.ipynb
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "0124a829-c44f-4f1d-9c2e-04d15074abc4",
    "metadata": {
     "collapsed": false
@@ -1322,16 +1322,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c++ -O3 -Wall -shared -std=c++11 -fPIC -undefined dynamic_lookup $(python3 -m pybind11 --includes) src/simple_ml_ext.cpp -o src/simple_ml_ext.so\n",
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.7.3, pytest-4.3.1, py-1.8.0, pluggy-0.9.0\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw0, inifile:\n",
-      "plugins: remotedata-0.3.1, openfiles-0.3.2, doctestplus-0.3.0, arraydiff-0.3\n",
-      "collected 6 items / 5 deselected / 1 selected                                  \u001b[0m\n",
-      "\n",
-      "tests/test_simple_ml.py \u001b[32m.\u001b[0m\u001b[36m                                                [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m\u001b[1m==================== 1 passed, 5 deselected in 0.49 seconds ====================\u001b[0m\n"
+      "c++ -O3 -Wall -shared -std=c++11 -fPIC $(python3 -m pybind11 --includes) src/simple_ml_ext.cpp -o src/simple_ml_ext.so\r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.10.10, pytest-8.3.3, pluggy-1.5.0\r\n",
+      "rootdir: /home/siyer/docs/projects/ongoing/mlcourses/dlsys/0\r\n",
+      "plugins: anyio-3.6.2\r\n",
+      "\u001b[1mcollecting ... \u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\r",
+      "collected 6 items / 5 deselected / 1 selected                                  \u001b[0m\r\n",
+      "\r\n",
+      "tests/test_simple_ml.py "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m.\u001b[0m\u001b[32m                                                [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m5 deselected\u001b[0m\u001b[32m in 0.70s\u001b[0m\u001b[32m ========================\u001b[0m\r\n"
      ]
     }
    ],
@@ -1352,14 +1373,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "d405e228-e838-4401-afdd-e3e902d6c2e6",
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "!python3 -m mugrade submit YOUR_GRADER_KEY_HERE -k \"softmax_regression_epoch_cpp\""
+    "#!python3 -m mugrade submit YOUR_GRADER_KEY_HERE -k \"softmax_regression_epoch_cpp\""
    ]
   },
   {
@@ -1376,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "3e6ea7d6-2cee-4eb8-b0d9-fb34ecde3925",
    "metadata": {
     "collapsed": false
@@ -1387,15 +1408,45 @@
      "output_type": "stream",
      "text": [
       "| Epoch | Train Loss | Train Err | Test Loss | Test Err |\n",
-      "|     0 |    0.35134 |   0.10182 |   0.33588 |  0.09400 |\n",
+      "|     0 |    0.35134 |   0.10182 |   0.33588 |  0.09400 |\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "|     1 |    0.32142 |   0.09268 |   0.31086 |  0.08730 |\n",
-      "|     2 |    0.30802 |   0.08795 |   0.30097 |  0.08550 |\n",
+      "|     2 |    0.30802 |   0.08795 |   0.30097 |  0.08550 |\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "|     3 |    0.29987 |   0.08532 |   0.29558 |  0.08370 |\n",
-      "|     4 |    0.29415 |   0.08323 |   0.29215 |  0.08230 |\n",
+      "|     4 |    0.29415 |   0.08323 |   0.29215 |  0.08230 |\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "|     5 |    0.28981 |   0.08182 |   0.28973 |  0.08090 |\n",
-      "|     6 |    0.28633 |   0.08085 |   0.28793 |  0.08080 |\n",
+      "|     6 |    0.28633 |   0.08085 |   0.28793 |  0.08080 |\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "|     7 |    0.28345 |   0.07997 |   0.28651 |  0.08040 |\n",
-      "|     8 |    0.28100 |   0.07923 |   0.28537 |  0.08010 |\n",
+      "|     8 |    0.28100 |   0.07923 |   0.28537 |  0.08010 |\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "|     9 |    0.27887 |   0.07847 |   0.28442 |  0.07970 |\n"
      ]
     }
@@ -1430,6 +1481,16 @@
     "\n",
     "But for now, assuming your code recreates the Python behavior, you're done with the assignment, and can get ready for our next dive into automatic differentiation."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b6d5455-0c67-435c-a831-f601f297f49e",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
