--- a/dlsys/1/hw1.ipynb
+++ b/dlsys/1/hw1.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "e205f0d0-9f19-4a60-93a3-9a6112b164a6",
    "metadata": {
     "colab": {
@@ -469,14 +469,38 @@
     "id": "pQqntvth8GVa",
     "outputId": "c8bcdac7-c8e3-47ca-f450-fac21d29bfab"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.10.10, pytest-8.3.3, pluggy-1.5.0\r\n",
+      "rootdir: /home/siyer/docs/projects/ongoing/mlcourses/dlsys/1\r\n",
+      "plugins: anyio-3.6.2\r\n",
+      "\u001b[1mcollecting ... \u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\r",
+      "collected 29 items / 28 deselected / 1 selected                                \u001b[0m\r\n",
+      "\r\n",
+      "tests/hw1/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                          [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m28 deselected\u001b[0m\u001b[32m in 0.31s\u001b[0m\u001b[32m =======================\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -k \"topo_sort\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "8bdf1cfd-50e3-4f3f-95ff-401b91d5075b",
    "metadata": {
     "colab": {
@@ -488,7 +512,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"topo_sort\""
+    "#!python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"topo_sort\""
    ]
   },
   {
@@ -527,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "37b9dbb5-d00e-4660-b4e4-3445a120fe8e",
    "metadata": {
     "colab": {
@@ -537,14 +561,45 @@
     "id": "4L37C7ez8fkM",
     "outputId": "f2846195-0754-465c-97d7-c36a7ade8cea"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.10.10, pytest-8.3.3, pluggy-1.5.0\r\n",
+      "rootdir: /home/siyer/docs/projects/ongoing/mlcourses/dlsys/1\r\n",
+      "plugins: anyio-3.6.2\r\n",
+      "\u001b[1mcollecting ... \u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\r",
+      "collected 29 items / 28 deselected / 1 selected                                \u001b[0m\r\n",
+      "\r\n",
+      "tests/hw1/test_autograd_hw.py "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m.\u001b[0m\u001b[32m                                          [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m28 deselected\u001b[0m\u001b[32m in 0.35s\u001b[0m\u001b[32m =======================\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -k \"compute_gradient\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "a10e5fc6-13c6-4134-ae4c-036a4d15c0aa",
    "metadata": {
     "colab": {
@@ -556,7 +611,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"compute_gradient\""
+    "##!python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"compute_gradient\""
    ]
   },
   {
@@ -585,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "79a708ee-c38f-4e01-b52a-aa6f404b1ae2",
    "metadata": {
     "colab": {
@@ -595,14 +650,45 @@
     "id": "CpwK-c989OkI",
     "outputId": "0f145d00-6dce-46c9-d5f4-5d72e6d65419"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.10.10, pytest-8.3.3, pluggy-1.5.0\r\n",
+      "rootdir: /home/siyer/docs/projects/ongoing/mlcourses/dlsys/1\r\n",
+      "plugins: anyio-3.6.2\r\n",
+      "\u001b[1mcollecting ... \u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\r",
+      "collected 29 items / 28 deselected / 1 selected                                \u001b[0m\r\n",
+      "\r\n",
+      "tests/hw1/test_autograd_hw.py "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m.\u001b[0m\u001b[32m                                          [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m28 deselected\u001b[0m\u001b[32m in 0.71s\u001b[0m\u001b[32m =======================\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -k \"softmax_loss_ndl\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "3303fb66-cde6-4a0a-81ca-a0b89db9a470",
    "metadata": {
     "colab": {
@@ -614,7 +700,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"softmax_loss_ndl\""
+    "#!python3 -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"softmax_loss_ndl\""
    ]
   },
   {
@@ -652,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "30eabae4-edf2-440f-9feb-6ec9fefc8304",
    "metadata": {
     "colab": {
@@ -662,7 +748,38 @@
     "id": "LHKC82ex9wFg",
     "outputId": "5a319557-624e-45be-e839-3e1d30efb6f5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.10.10, pytest-8.3.3, pluggy-1.5.0\r\n",
+      "rootdir: /home/siyer/docs/projects/ongoing/mlcourses/dlsys/1\r\n",
+      "plugins: anyio-3.6.2\r\n",
+      "\u001b[1mcollecting ... \u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\r",
+      "collected 29 items / 28 deselected / 1 selected                                \u001b[0m\r\n",
+      "\r\n",
+      "tests/hw1/test_autograd_hw.py "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m.\u001b[0m\u001b[32m                                          [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m28 deselected\u001b[0m\u001b[32m in 2.69s\u001b[0m\u001b[32m =======================\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -l -k \"nn_epoch_ndl\""
    ]
