--- a/dlsys/2/hw2.ipynb
+++ b/dlsys/2/hw2.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "582901f5-69fe-42e5-b30d-1c71185a8671",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# 10-714 Homework 2\n",
     "\n",
@@ -11,8 +14,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "1a757166-9a47-4262-a976-b1a8a536e063",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "7e5b83ad-3871-4859-a1aa-edfb50de3e68",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Code to set up the assignment\n",
@@ -29,7 +48,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "a05b1283-6fe7-4062-b5f2-2f853271fe07",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Question 0\n",
     "\n",
@@ -41,8 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "id": "063610a5-a747-48c3-a009-6da0ac01e3f9",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -52,7 +77,9 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff542269-88ad-4c11-af2a-aaaa465c8d99",
    "metadata": {
+    "collapsed": false,
     "tags": []
    },
    "source": [
@@ -125,25 +152,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "id": "9b0541f7-9dd3-4678-b5f0-b5f4652db834",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.10.10, pytest-8.3.3, pluggy-1.5.0 -- /home/siyer/.pyenv/versions/ai/bin/python3\r\n",
+      "cachedir: .pytest_cache\r\n",
+      "rootdir: /home/siyer/docs/projects/ongoing/mlcourses/dlsys/2\r\n",
+      "plugins: anyio-3.6.2\r\n",
+      "\u001b[1mcollecting ... \u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\r",
+      "collected 93 items / 89 deselected / 4 selected                                \u001b[0m\r\n",
+      "\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_init_kaiming_uniform \u001b[32mPASSED\u001b[0m\u001b[32m         [ 25%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_init_kaiming_normal \u001b[32mPASSED\u001b[0m\u001b[32m          [ 50%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_init_xavier_uniform \u001b[32mPASSED\u001b[0m\u001b[32m          [ 75%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_init_xavier_normal \u001b[32mPASSED\u001b[0m\u001b[32m           [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m4 passed\u001b[0m, \u001b[33m89 deselected\u001b[0m\u001b[32m in 0.23s\u001b[0m\u001b[32m =======================\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -v -k \"test_init\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 14,
+   "id": "9c94ff0d-4c44-4ecf-9fe2-d72a0e32546b",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"init\" -s"
+    "#!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"init\" -s"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "35373cc6-daad-4e8c-83a5-5a859c40ed30",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Question 2\n",
     "\n",
@@ -174,7 +238,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "9ff5e8e4-b482-4dd7-94b3-4010f3ba7d6c",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_linear\""
@@ -183,7 +250,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "f710e4b2-170e-4993-b3ba-dc1116bde14b",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_linear\""
@@ -191,7 +261,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "b1bd7e1f-16ff-417e-a8ba-77dde4d65676",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### ReLU\n",
     "`needle.nn.ReLU()`\n",
@@ -210,7 +283,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "b27f26a1-87ce-4a7c-aede-f675dd1d74f8",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_relu\""
@@ -219,7 +295,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "5c055ce8-92e6-4d45-8682-77b05549f5c9",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_relu\""
@@ -227,7 +306,9 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6d80dc76-2e1e-44ec-904e-f5c3d532b4c3",
    "metadata": {
+    "collapsed": false,
     "tags": []
    },
    "source": [
@@ -246,7 +327,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "c9a5690c-46b1-4df3-b038-fb13743118d9",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_sequential\""
@@ -255,7 +339,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "8cebbbcf-1984-4fe8-b380-9b7e9f51a6a2",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_sequential\""
@@ -263,7 +350,9 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d6809cc3-ddc5-4d65-b4a0-f23575af1624",
    "metadata": {
+    "collapsed": false,
     "tags": []
    },
    "source": [
@@ -286,7 +375,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "eae8c783-e56a-418d-b738-896406bccde3",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_op_logsumexp\""
@@ -295,7 +387,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "06e2e6b5-5bff-4c46-a18a-b3a97ffd965a",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"op_logsumexp\""
@@ -303,7 +398,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "8ff419d5-261a-4b8f-97c9-e415cd7d7884",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### LogSoftmax\n",
     "\n",
@@ -320,7 +418,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "a8e71d4e-5a4d-4f7d-85fd-ea00584b5d22",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_op_logsoftmax\""
@@ -329,7 +430,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "7b0b9649-39e2-4810-bfa8-341c97ff1e9b",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"op_logsoftmax\""
@@ -337,7 +441,9 @@
   },
   {
    "cell_type": "markdown",
+   "id": "14fe1e58-256f-43e6-8044-995efc464da0",
    "metadata": {
+    "collapsed": false,
     "tags": []
    },
    "source": [
@@ -359,7 +465,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "27cb99ff-6c66-4376-af5f-cf5a437815a8",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_softmax_loss\""
@@ -368,7 +477,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "a66fc35f-9174-4f1e-aea4-47d7ad72e08e",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_softmax_loss\""
@@ -376,7 +488,9 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5d98518a-42d9-43ea-89fe-2a39ba32c7f9",
    "metadata": {
+    "collapsed": false,
     "tags": []
    },
    "source": [
@@ -404,7 +518,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "3c0bf5ce-74e4-40a0-a773-a15046f43909",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_layernorm\""
@@ -413,7 +530,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "e92a5f35-dd03-48db-850b-d739868b4a3c",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_layernorm\""
@@ -421,7 +541,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "cfe5d0f7-fc7e-498d-8397-5cc1eb84a1af",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "\n",
     "### Flatten\n",
@@ -433,7 +556,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "271baee5-773e-434f-8663-9f187581f9b5",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_flatten\""
@@ -442,7 +568,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "08a714d0-0d2b-42e8-84db-f0e22ff58004",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_flatten\""
@@ -450,7 +579,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "d95970a5-e051-4208-994b-07961128e1b7",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### BatchNorm1d\n",
     "`needle.nn.BatchNorm1d(dim, eps=1e-5, momentum=0.1, device=None, dtype=\"float32\")`\n",
@@ -491,7 +623,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "e0cfccd0-f40b-485d-a753-9241864c25db",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_batchnorm\""
@@ -500,7 +635,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "5ffd0aa6-db96-4c77-8e74-86fd5b524c41",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_batchnorm\""
@@ -508,7 +646,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "66b8542c-08eb-43df-aa37-e7e58e4a4189",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Dropout\n",
     "`needle.nn.Dropout(p = 0.5)`\n",
@@ -535,7 +676,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "1b1e8609-8290-40cb-bd0d-1f58769b4331",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_dropout\""
@@ -544,7 +688,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "dad493da-9e66-4f18-8cdd-382910b0a44d",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_dropout\""
@@ -552,7 +699,9 @@
   },
   {
    "cell_type": "markdown",
+   "id": "93ef06f8-aa0a-4540-a4b6-f4f97788e115",
    "metadata": {
+    "collapsed": false,
     "tags": []
    },
    "source": [
@@ -567,7 +716,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "e8c1218b-51d6-461b-b012-eecfc3086db3",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_residual\""
@@ -576,7 +728,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "96ee0aaa-aabf-414d-998d-c674f9effc20",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_residual\""
@@ -584,7 +739,9 @@
   },
   {
    "cell_type": "markdown",
+   "id": "64cdf036-411d-479b-8feb-d606e248a241",
    "metadata": {
+    "collapsed": false,
     "tags": []
    },
    "source": [
@@ -623,7 +780,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "0d5b3a01-5216-4f53-a70f-2e7c0120f226",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_optim_sgd\""
@@ -632,7 +792,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "ee2d23f1-3752-4aaa-8766-4eb0aae1388b",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"optim_sgd\""
@@ -640,7 +803,9 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee0dc3c7-7c18-43e2-8e48-7520ec8159bb",
    "metadata": {
+    "collapsed": false,
     "tags": []
    },
    "source": [
@@ -675,7 +840,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "36b2cfae-64da-486d-9653-d107adbe2c5a",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_optim_adam\""
@@ -684,7 +852,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "41745e46-e1d5-465f-b37e-0f827e83f269",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"optim_adam\""
@@ -692,7 +863,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "f528b658-88d3-4544-b12a-21d26a03ea9a",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Question 4\n",
     "\n",
@@ -726,7 +900,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "51c7140c-06ef-44ba-b668-52d7801ae6be",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"flip_horizontal\"\n",
@@ -736,7 +913,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "4914a988-72dc-44b5-b400-b9b1f5612962",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"flip_horizontal\"\n",
@@ -745,7 +925,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "f87ef14f-0dbf-4b5d-ba79-649a66914aee",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Dataset\n",
     "\n",
@@ -765,7 +948,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "6e7efb4d-4135-4f8c-a96c-fa3e8e2defbf",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_mnist_dataset\""
@@ -774,7 +960,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "35a6c699-0b15-431f-a1f4-c9003dc768a1",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"mnist_dataset\""
@@ -782,7 +971,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "7d6adf22-130a-4ece-8584-1fa24fe7b175",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Dataloader\n",
     "\n",
@@ -806,7 +998,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "c1dfd141-c0c1-4a67-8189-6343543c122f",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_dataloader\""
@@ -815,7 +1010,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "0dcf8b35-5282-46d0-959b-afc67db2df4e",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"dataloader\""
@@ -823,7 +1021,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "46078d70-71b9-4eb3-9204-fc2d41b7b1d3",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Question 5\n",
     "\n",
@@ -906,7 +1107,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "88dcb097-41c0-4a6d-9efd-c4a00f0fddb0",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python3 -m pytest -v -k \"test_mlp\""
@@ -915,7 +1119,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "39bd26c7-14d1-4503-b88e-b738b6af10c3",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"mlp_resnet\""
@@ -923,7 +1130,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "81666b5b-1ac4-4404-9a75-8309d31bb957",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "We encourage to experiment with the `mlp_resnet.py` training script.\n",
     "You can investigate the effect of using different initializers on the Linear layers,\n",
@@ -935,8 +1145,20 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "argv": [
+    "python",
+    "-m",
+    "ipykernel_launcher",
+    "-f",
+    "{connection_file}"
+   ],
+   "display_name": "Python 3 (ipykernel)",
+   "env": null,
+   "interrupt_mode": "signal",
    "language": "python",
+   "metadata": {
+    "debugger": true
+   },
    "name": "python3"
   },
   "language_info": {
@@ -951,6 +1173,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
+  "name": "hw2.ipynb",
   "vscode": {
    "interpreter": {
     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
