--- a/dlsys/2/hw2.ipynb
+++ b/dlsys/2/hw2.ipynb
@@ -237,26 +237,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "9ff5e8e4-b482-4dd7-94b3-4010f3ba7d6c",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.10.10, pytest-8.3.3, pluggy-1.5.0 -- /home/siyer/.pyenv/versions/ai/bin/python3\r\n",
+      "cachedir: .pytest_cache\r\n",
+      "rootdir: /home/siyer/docs/projects/ongoing/mlcourses/dlsys/2\r\n",
+      "plugins: anyio-3.6.2\r\n",
+      "\u001b[1mcollecting ... \u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\r",
+      "collected 93 items / 85 deselected / 8 selected                                \u001b[0m\r\n",
+      "\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_linear_weight_init_1 \u001b[32mPASSED\u001b[0m\u001b[32m      [ 12%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_linear_bias_init_1 \u001b[32mPASSED\u001b[0m\u001b[32m        [ 25%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_linear_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 37%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_linear_forward_2 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 50%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_linear_forward_3 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 62%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_linear_backward_1 \u001b[32mPASSED\u001b[0m\u001b[32m         [ 75%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_linear_backward_2 \u001b[32mPASSED\u001b[0m\u001b[32m         [ 87%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_linear_backward_3 \u001b[32mPASSED\u001b[0m\u001b[32m         [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m8 passed\u001b[0m, \u001b[33m85 deselected\u001b[0m\u001b[32m in 0.25s\u001b[0m\u001b[32m =======================\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_linear\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "f710e4b2-170e-4993-b3ba-dc1116bde14b",
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_linear\""
+    "#!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_linear\""
    ]
   },
   {
@@ -282,26 +314,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "b27f26a1-87ce-4a7c-aede-f675dd1d74f8",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.10.10, pytest-8.3.3, pluggy-1.5.0 -- /home/siyer/.pyenv/versions/ai/bin/python3\r\n",
+      "cachedir: .pytest_cache\r\n",
+      "rootdir: /home/siyer/docs/projects/ongoing/mlcourses/dlsys/2\r\n",
+      "plugins: anyio-3.6.2\r\n",
+      "\u001b[1mcollecting ... \u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\r",
+      "collected 93 items / 91 deselected / 2 selected                                \u001b[0m\r\n",
+      "\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_relu_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m            [ 50%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_relu_backward_1 \u001b[32mPASSED\u001b[0m\u001b[32m           [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m2 passed\u001b[0m, \u001b[33m91 deselected\u001b[0m\u001b[32m in 0.23s\u001b[0m\u001b[32m =======================\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_relu\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "5c055ce8-92e6-4d45-8682-77b05549f5c9",
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_relu\""
+    "#!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_relu\""
    ]
   },
   {
@@ -326,26 +384,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "c9a5690c-46b1-4df3-b038-fb13743118d9",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.10.10, pytest-8.3.3, pluggy-1.5.0 -- /home/siyer/.pyenv/versions/ai/bin/python3\r\n",
+      "cachedir: .pytest_cache\r\n",
+      "rootdir: /home/siyer/docs/projects/ongoing/mlcourses/dlsys/2\r\n",
+      "plugins: anyio-3.6.2\r\n",
+      "\u001b[1mcollecting ... \u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\r",
+      "collected 93 items / 91 deselected / 2 selected                                \u001b[0m\r\n",
+      "\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_sequential_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m      [ 50%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_sequential_backward_1 \u001b[32mPASSED\u001b[0m\u001b[32m     [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m2 passed\u001b[0m, \u001b[33m91 deselected\u001b[0m\u001b[32m in 0.23s\u001b[0m\u001b[32m =======================\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_sequential\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8cebbbcf-1984-4fe8-b380-9b7e9f51a6a2",
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_sequential\""
+    "#!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_sequential\""
    ]
   },
   {
@@ -370,18 +454,6 @@
     "- `axes` - Tuple of axes to sum and take the maximum element over. This uses the same conventions as `needle.ops.Summation()`\n",
     "\n",
     "___"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eae8c783-e56a-418d-b738-896406bccde3",
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "!python3 -m pytest -v -k \"test_op_logsumexp\""
    ]
   },
   {
