--- a/dlsys/2/hw2.ipynb
+++ b/dlsys/2/hw2.ipynb
@@ -893,12 +893,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "e0cfccd0-f40b-485d-a753-9241864c25db",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.10.10, pytest-8.3.3, pluggy-1.5.0 -- /home/siyer/.pyenv/versions/ai/bin/python3\r\n",
+      "cachedir: .pytest_cache\r\n",
+      "rootdir: /home/siyer/docs/projects/ongoing/mlcourses/dlsys/2\r\n",
+      "plugins: anyio-3.6.2\r\n",
+      "\u001b[1mcollecting ... \u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\r",
+      "collected 93 items / 85 deselected / 8 selected                                \u001b[0m\r\n",
+      "\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_batchnorm_check_model_eval_switches_training_flag_1 \u001b[32mPASSED\u001b[0m\u001b[32m [ 12%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_batchnorm_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m       [ 25%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_batchnorm_forward_affine_1 \u001b[32mPASSED\u001b[0m\u001b[32m [ 37%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_batchnorm_backward_1 \u001b[32mPASSED\u001b[0m\u001b[32m      [ 50%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_batchnorm_backward_affine_1 \u001b[32mPASSED\u001b[0m\u001b[32m [ 62%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_batchnorm_running_mean_1 \u001b[32mPASSED\u001b[0m\u001b[32m  [ 75%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_batchnorm_running_var_1 \u001b[32mPASSED\u001b[0m\u001b[32m   [ 87%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_batchnorm_running_grad_1 "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mPASSED\u001b[0m\u001b[32m  [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m8 passed\u001b[0m, \u001b[33m85 deselected\u001b[0m\u001b[32m in 0.24s\u001b[0m\u001b[32m =======================\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_batchnorm\""
    ]
@@ -946,19 +985,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "1b1e8609-8290-40cb-bd0d-1f58769b4331",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.10.10, pytest-8.3.3, pluggy-1.5.0 -- /home/siyer/.pyenv/versions/ai/bin/python3\r\n",
+      "cachedir: .pytest_cache\r\n",
+      "rootdir: /home/siyer/docs/projects/ongoing/mlcourses/dlsys/2\r\n",
+      "plugins: anyio-3.6.2\r\n",
+      "\u001b[1mcollecting ... \u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\r",
+      "collected 93 items / 91 deselected / 2 selected                                \u001b[0m\r\n",
+      "\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_dropout_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m         [ 50%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_dropout_backward_1 \u001b[32mPASSED\u001b[0m\u001b[32m        [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m2 passed\u001b[0m, \u001b[33m91 deselected\u001b[0m\u001b[32m in 0.23s\u001b[0m\u001b[32m =======================\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -v -k \"test_nn_dropout\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "dad493da-9e66-4f18-8cdd-382910b0a44d",
    "metadata": {
     "collapsed": false
@@ -986,26 +1051,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "e8c1218b-51d6-461b-b012-eecfc3086db3",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.10.10, pytest-8.3.3, pluggy-1.5.0 -- /home/siyer/.pyenv/versions/ai/bin/python3\r\n",
+      "cachedir: .pytest_cache\r\n",
+      "rootdir: /home/siyer/docs/projects/ongoing/mlcourses/dlsys/2\r\n",
+      "plugins: anyio-3.6.2\r\n",
+      "\u001b[1mcollecting ... \u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\r",
+      "collected 93 items / 91 deselected / 2 selected                                \u001b[0m\r\n",
+      "\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_residual_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m        [ 50%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_nn_residual_backward_1 \u001b[32mPASSED\u001b[0m\u001b[32m       [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m2 passed\u001b[0m, \u001b[33m91 deselected\u001b[0m\u001b[32m in 0.23s\u001b[0m\u001b[32m =======================\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
-    "#!python3 -m pytest -v -k \"test_nn_residual\""
+    "!python3 -m pytest -v -k \"test_nn_residual\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "96ee0aaa-aabf-414d-998d-c674f9effc20",
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_residual\""
+    "#!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_residual\""
    ]
   },
   {
