--- a/dlsys/2/hw2.ipynb
+++ b/dlsys/2/hw2.ipynb
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 18,
    "id": "34ba303f-bc65-4702-8250-3f73b4c93868",
    "metadata": {
     "collapsed": false
@@ -1187,12 +1187,12 @@
       "\u001b[32mPASSED\u001b[0m\u001b[32m [ 83%]\u001b[0m\r\n",
       "tests/hw2/test_nn_and_optim.py::test_optim_sgd_z_memory_check_1 \u001b[32mPASSED\u001b[0m\u001b[32m   [100%]\u001b[0m\r\n",
       "\r\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m6 passed\u001b[0m, \u001b[33m87 deselected\u001b[0m\u001b[32m in 0.53s\u001b[0m\u001b[32m =======================\u001b[0m\r\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m6 passed\u001b[0m, \u001b[33m87 deselected\u001b[0m\u001b[32m in 0.52s\u001b[0m\u001b[32m =======================\u001b[0m\r\n"
      ]
     }
    ],
    "source": [
-    "python3 -m pytest -v -k \"test_optim_sgd\""
+    "!python3 -m pytest -v -k \"test_optim_sgd\""
    ]
   },
   {
@@ -1701,21 +1701,62 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\r\n",
+      "platform linux -- Python 3.10.10, pytest-8.3.3, pluggy-1.5.0 -- /home/siyer/.pyenv/versions/ai/bin/python3\r\n",
+      "cachedir: .pytest_cache\r\n",
+      "rootdir: /home/siyer/docs/projects/ongoing/mlcourses/dlsys/2\r\n",
+      "plugins: anyio-3.6.2\r\n",
+      "\u001b[1mcollecting ... \u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\r",
+      "collected 93 items / 83 deselected / 10 selected                               \u001b[0m\r\n",
+      "\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_mlp_residual_block_num_params_1 \u001b[32mPASSED\u001b[0m\u001b[32m [ 10%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_mlp_residual_block_num_params_2 \u001b[32mPASSED\u001b[0m\u001b[32m [ 20%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_mlp_residual_block_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m [ 30%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_mlp_resnet_num_params_1 \u001b[32mPASSED\u001b[0m\u001b[32m      [ 40%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_mlp_resnet_num_params_2 \u001b[32mPASSED\u001b[0m\u001b[32m      [ 50%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_mlp_resnet_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m         [ 60%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_mlp_resnet_forward_2 "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mPASSED\u001b[0m\u001b[32m         [ 70%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_mlp_train_epoch_1 "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mPASSED\u001b[0m\u001b[32m            [ 80%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_mlp_eval_epoch_1 "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mPASSED\u001b[0m\u001b[32m             [ 90%]\u001b[0m\r\n",
+      "tests/hw2/test_nn_and_optim.py::test_mlp_train_mnist_1 "
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -v -k \"test_mlp\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39bd26c7-14d1-4503-b88e-b738b6af10c3",
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"mlp_resnet\""
    ]
   },
   {
