--- a/dlsys/2/hw2.ipynb
+++ b/dlsys/2/hw2.ipynb
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "88dcb097-41c0-4a6d-9efd-c4a00f0fddb0",
    "metadata": {
     "collapsed": false
@@ -1752,6 +1752,15 @@
      "text": [
       "\u001b[32mPASSED\u001b[0m\u001b[32m             [ 90%]\u001b[0m\r\n",
       "tests/hw2/test_nn_and_optim.py::test_mlp_train_mnist_1 "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mPASSED\u001b[0m\u001b[32m            [100%]\u001b[0m\r\n",
+      "\r\n",
+      "\u001b[32m====================== \u001b[32m\u001b[1m10 passed\u001b[0m, \u001b[33m83 deselected\u001b[0m\u001b[32m in 22.21s\u001b[0m\u001b[32m ======================\u001b[0m\r\n"
      ]
     }
    ],
