--- a/dlsys/2/hw2.ipynb
+++ b/dlsys/2/hw2.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "582901f5-69fe-42e5-b30d-1c71185a8671",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "# 10-714 Homework 2\n",
@@ -15,9 +17,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1a757166-9a47-4262-a976-b1a8a536e063",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -29,9 +33,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e5b83ad-3871-4859-a1aa-edfb50de3e68",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -49,9 +55,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a05b1283-6fe7-4062-b5f2-2f853271fe07",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Question 0\n",
@@ -65,9 +73,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "063610a5-a747-48c3-a009-6da0ac01e3f9",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -78,9 +88,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff542269-88ad-4c11-af2a-aaaa465c8d99",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "tags": []
    },
    "source": [
@@ -154,9 +166,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9b0541f7-9dd3-4678-b5f0-b5f4652db834",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -201,9 +215,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9c94ff0d-4c44-4ecf-9fe2-d72a0e32546b",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -212,9 +228,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35373cc6-daad-4e8c-83a5-5a859c40ed30",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Question 2\n",
@@ -246,9 +264,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9ff5e8e4-b482-4dd7-94b3-4010f3ba7d6c",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -297,9 +317,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f710e4b2-170e-4993-b3ba-dc1116bde14b",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -308,9 +330,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1bd7e1f-16ff-417e-a8ba-77dde4d65676",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### ReLU\n",
@@ -330,9 +354,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b27f26a1-87ce-4a7c-aede-f675dd1d74f8",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -375,9 +401,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5c055ce8-92e6-4d45-8682-77b05549f5c9",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -386,9 +414,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d80dc76-2e1e-44ec-904e-f5c3d532b4c3",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "tags": []
    },
    "source": [
@@ -407,9 +437,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c9a5690c-46b1-4df3-b038-fb13743118d9",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -445,9 +477,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8cebbbcf-1984-4fe8-b380-9b7e9f51a6a2",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -456,9 +490,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6809cc3-ddc5-4d65-b4a0-f23575af1624",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "tags": []
    },
    "source": [
@@ -477,9 +513,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "49ad483f-1a35-492a-b4ad-36448d1a07ea",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -523,9 +561,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "06e2e6b5-5bff-4c46-a18a-b3a97ffd965a",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -534,9 +574,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ff419d5-261a-4b8f-97c9-e415cd7d7884",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### LogSoftmax\n",
@@ -554,9 +596,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c1ebe629-f88f-48e4-a70f-e039859a3b8c",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -599,9 +643,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14fe1e58-256f-43e6-8044-995efc464da0",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "tags": []
    },
    "source": [
@@ -623,9 +669,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "27cb99ff-6c66-4376-af5f-cf5a437815a8",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -663,9 +711,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a66fc35f-9174-4f1e-aea4-47d7ad72e08e",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -674,9 +724,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d98518a-42d9-43ea-89fe-2a39ba32c7f9",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "tags": []
    },
    "source": [
@@ -704,9 +756,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3c0bf5ce-74e4-40a0-a773-a15046f43909",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -754,9 +808,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e92a5f35-dd03-48db-850b-d739868b4a3c",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -765,9 +821,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfe5d0f7-fc7e-498d-8397-5cc1eb84a1af",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "\n",
@@ -780,9 +838,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "271baee5-773e-434f-8663-9f187581f9b5",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -825,9 +885,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "08a714d0-0d2b-42e8-84db-f0e22ff58004",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -836,9 +898,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d95970a5-e051-4208-994b-07961128e1b7",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### BatchNorm1d\n",
@@ -880,9 +944,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e0cfccd0-f40b-485d-a753-9241864c25db",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -924,9 +990,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5ffd0aa6-db96-4c77-8e74-86fd5b524c41",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -935,9 +1003,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66b8542c-08eb-43df-aa37-e7e58e4a4189",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Dropout\n",
@@ -965,9 +1035,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1b1e8609-8290-40cb-bd0d-1f58769b4331",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1003,9 +1075,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "dad493da-9e66-4f18-8cdd-382910b0a44d",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1014,9 +1088,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93ef06f8-aa0a-4540-a4b6-f4f97788e115",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "tags": []
    },
    "source": [
@@ -1031,9 +1107,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e8c1218b-51d6-461b-b012-eecfc3086db3",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1069,9 +1147,11 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "96ee0aaa-aabf-414d-998d-c674f9effc20",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1080,9 +1160,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64cdf036-411d-479b-8feb-d606e248a241",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "tags": []
    },
    "source": [
@@ -1121,9 +1203,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "34ba303f-bc65-4702-8250-3f73b4c93868",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1198,9 +1282,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee2d23f1-3752-4aaa-8766-4eb0aae1388b",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1209,9 +1295,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee0dc3c7-7c18-43e2-8e48-7520ec8159bb",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "tags": []
    },
    "source": [
@@ -1246,9 +1334,11 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "36b2cfae-64da-486d-9653-d107adbe2c5a",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1331,9 +1421,11 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "41745e46-e1d5-465f-b37e-0f827e83f269",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1342,9 +1434,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f528b658-88d3-4544-b12a-21d26a03ea9a",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Question 4\n",
@@ -1379,9 +1473,11 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "51c7140c-06ef-44ba-b668-52d7801ae6be",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1441,9 +1537,11 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "4914a988-72dc-44b5-b400-b9b1f5612962",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1453,9 +1551,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f87ef14f-0dbf-4b5d-ba79-649a66914aee",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Dataset\n",
@@ -1476,9 +1576,11 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "6e7efb4d-4135-4f8c-a96c-fa3e8e2defbf",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1520,9 +1622,11 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "35a6c699-0b15-431f-a1f4-c9003dc768a1",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1531,9 +1635,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d6adf22-130a-4ece-8584-1fa24fe7b175",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Dataloader\n",
@@ -1555,9 +1661,11 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "c1dfd141-c0c1-4a67-8189-6343543c122f",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1600,9 +1708,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dcf8b35-5282-46d0-959b-afc67db2df4e",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1611,9 +1721,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46078d70-71b9-4eb3-9204-fc2d41b7b1d3",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Question 5\n",
@@ -1697,9 +1809,11 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "88dcb097-41c0-4a6d-9efd-c4a00f0fddb0",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1770,9 +1884,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81666b5b-1ac4-4404-9a75-8309d31bb957",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "We encourage to experiment with the `mlp_resnet.py` training script.\n",
@@ -1785,20 +1901,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "Python 3 (ipykernel)",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": {
-    "debugger": true
-   },
    "name": "python3"
   },
   "language_info": {
@@ -1811,7 +1915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.2"
   },
   "name": "hw2.ipynb",
   "vscode": {
